#1264 Fix custom time picker. Set correct sizes for it not to be cropped

--- a/server/http-dashboard/app/scenes/Devices/components/Device/components/Dashboard/styles.less
+++ b/server/http-dashboard/app/scenes/Devices/components/Device/components/Dashboard/styles.less
@@ -37,7 +37,11 @@
     }
   }
   .devices--device-timeline--time-filtering-specific-time-select {
-    width: 330px;
+
+  }
+  .ant-calendar-range-picker-separator {
+    line-height: 30px;
+    width: 12px;
   }
 }
 
